# engine

./: .cirrus.yml  .gitignore  .gitlab-ci.yml  AUTHORS  BUILD.gn  DEPS  README.md  compile_commands.json  log.txt
assets/: BUILD.gn  zip_asset_store.cc
bdflutter/: bdconfig.gni
bdflutter/assets/: BD_BUILD.gni  zip_asset_store.cc  zip_asset_store.h
bdflutter/common/: BD_BUILD.gni  fps_recorder.cc  fps_recorder.h  fps_recorder_test.cc  fps_recorder_test.h  fps_recorder_unittests.cc
bdflutter/lib/: BD_BUILD.gni
bdflutter/lib/ui/: performance.dart
bdflutter/lib/ui/painting/: image_loader.cc  image_loader.h
bdflutter/lib/ui/performance/: boost.cc  boost.h  performance.cc  performance.h
bdflutter/shell/platform/android/: BD_BUILD.gni  android_external_image_loader.cc  android_external_image_loader.h
bdflutter/shell/platform/android/io/flutter/view/: ImageLoaderRegistryImpl.java  NativeLoadCallback.java
bdflutter/shell/platform/darwin/common/: BD_BUILD.gni
bdflutter/shell/platform/darwin/common/framework/Headers/: FlutterBinaryMessengerProvider.h
bdflutter/shell/platform/darwin/ios/: BD_BUILD.gni  ios_external_image_loader.h  ios_external_image_loader.mm  ios_external_image_loader_gl.h  ios_external_image_loader_gl.mm  ios_external_image_loader_metal.h  ios_external_image_loader_metal.mm  ios_image_loader_callback_context.h
bdflutter/shell/platform/darwin/ios/framework/Headers/: FlutterImageLoader.h
bdflutter/shell/platform/darwin/ios/framework/Source/: FlutterCompressSizeModeManager.h  FlutterCompressSizeModeManager.mm  NSData+FlutterGzip.h  NSData+FlutterGzip.m
bdflutter/tt_build_tools/: android_build.sh  android_build_linux.sh  ci_build_engine.sh  iOS_build.sh  utils.sh
ci/licenses_golden/: licenses_flutter
common/: BUILD.gn  config.gni  fps_recorder.cc  fps_recorder.h  settings.cc  settings.h
flow/: BUILD.gn  compositor_context.cc  compositor_context.h  image_loader.cc  image_loader.h  instrumentation.cc  instrumentation.h  skia_gpu_object.cc  skia_gpu_object.h  skia_gpu_object_unittests.cc  texture.h  texture_unittests.cc
flow/layers/: performance_overlay_layer.cc  physical_shape_layer.cc  texture_layer.cc  texture_layer.h
flutter_frontend_server/lib/: server.dart  track_route_constructor_locations.dart
flutter_kernel_transformers/lib/: track_route_constructor_locations.dart
fml/: BUILD.gn  compiler_specific.h  logging.h  message_loop_impl.cc  message_loop_impl.h  task_runner.cc  task_runner.h  thread.cc  thread.h  trace_event.cc  trace_event.h
fml/synchronization/: sync_switch.cc
frontend_server/lib/: server.dart
lfkdsk_build_tools/: build_android.sh  build_ios.sh  ios-gn.sh  ios-ninja.sh
lfkdsk_build_tools/ios/: create-framework.sh  gn.sh  ninja.sh
lib/snapshot/: BUILD.gn
lib/ui/: BUILD.gn  boost.cc  boost.h  compositing.dart  dart_runtime_hooks.cc  dart_ui.cc  dart_ui.gni  dart_ui.h  hooks.dart  io_manager.h  native_bridge.cc  native_bridge.h  native_interpreter.cc  native_interpreter.h  natives.dart  painting.dart  performance.cc  performance.dart  performance.h  text.dart  ui.dart  ui_dart_state.cc  ui_dart_state.h  window.dart
runtime/: dart_isolate.cc  dart_isolate.h  dart_snapshot.cc  dart_vm.cc  dart_vm.h  dart_vm_lifecycle.h  runtime_controller.cc  runtime_controller.h  runtime_delegate.h
shell/common/: BUILD.gn  animator.cc  animator.h  engine.cc  engine.h  engine_unittests.cc  isolate_configuration.cc  isolate_configuration.h  pipeline.h  platform_view.cc  platform_view.h  rasterizer.cc  rasterizer.h  run_configuration.cc  shell.cc  shell.h  shell_benchmarks.cc  shell_io_manager.cc  shell_io_manager.h  shell_test.cc  shell_test.h  shell_unittests.cc  switches.cc  switches.h  thread_host.cc  thread_host.h  vsync_waiter.cc
shell/gpu/: BUILD.gn  (+1 more)
shell/platform/darwin/common/: BUILD.gn  framework_shared.gni
shell/platform/darwin/common/framework/Headers/: FlutterBinaryMessengerProvider.h
shell/platform/darwin/common/framework/Source/: FlutterBinaryMessengerProvider.h  FlutterChannels.mm
shell/platform/darwin/ios/: BUILD.gn  _FlutterClassDefineTpl.h  config.gni  ios_external_image_loader.h  ios_external_image_loader.mm  ios_external_texture_gl.h  ios_external_texture_gl.mm  ios_external_texture_metal.h  ios_external_texture_metal.mm  ios_gl_render_target.mm  ios_native_export_codec.h  ios_native_export_codec.mm  platform_view_ios.h  platform_view_ios.mm
shell/platform/darwin/ios/framework/Headers/: Flutter.h  FlutterAppDelegate.h  FlutterBinaryMessenger.h  FlutterCallbackCache.h  FlutterChannels.h  FlutterClassDefine.h  FlutterCodecs.h  FlutterDartProject.h  FlutterEngine.h  FlutterHeadlessDartRunner.h  FlutterImageLoader.h  FlutterPlatformViews.h  FlutterPlugin.h  FlutterPluginAppLifeCycleDelegate.h  FlutterTexture.h  FlutterViewController.h
shell/platform/darwin/ios/framework/Source/: FlutterAppDelegate.mm  FlutterAppDelegate_Internal.h  FlutterBinaryMessengerProvider.h  FlutterCallbackCache.mm  FlutterCallbackCache_Internal.h  FlutterChannels.mm  FlutterCodecs.mm  FlutterCompressSizeModeManager.h  FlutterCompressSizeModeManager.mm  FlutterDartProject.mm  FlutterDartProject_Internal.h  FlutterEngine.mm  FlutterEngine_Internal.h  FlutterHeadlessDartRunner.mm  FlutterObservatoryPublisher.h  FlutterObservatoryPublisher.mm  FlutterOverlayView.h  FlutterOverlayView.mm  FlutterPlatformPlugin.h  FlutterPlatformPlugin.mm  FlutterPlatformViews.mm  FlutterPlatformViews_Internal.h  FlutterPlatformViews_Internal.mm  FlutterPluginAppLifeCycleDelegate.mm  FlutterStandardCodec.mm  FlutterStandardCodec_Internal.h  FlutterTextInputDelegate.h  FlutterTextInputPlugin.h  FlutterTextInputPlugin.mm  FlutterView.h  FlutterView.mm  FlutterViewController.mm  FlutterViewControllerTest.m  FlutterViewController_Internal.h  FlutterZipArchive.h  FlutterZipArchive.m  NSData+FlutterGzip.h  NSData+FlutterGzip.m  accessibility_bridge.h  accessibility_bridge.mm  (+7 more)
testing/: run_tests.py
tools/: get_systab_so.py  gn
tt_build_tools/: android_build.sh  android_build_linux.sh  ci_build_engine.sh  iOS_build.sh  tosUpload.js  unittests.sh
(+117 files in other folders)
