# Copyright 2013 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//flutter/bdflutter/assets/BD_BUILD.gni")

source_set("assets") {
  sources = [
    "asset_manager.cc",
    "asset_manager.h",
    "asset_resolver.h",
    "directory_asset_bundle.cc",
    "directory_asset_bundle.h",
  ]

  # BD ADD: START
  sources += assets_store
  public_deps = assets_deps
  # END

  deps = [
    "//flutter/common",
    "//flutter/fml",
  ]

  public_configs = [ "//flutter:config" ]
}
