# Copyright 2013 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("config.gni")
# BD ADD:
import("$flutter_root/testing/testing.gni")

config("flutter_config") {
  defines = feature_defines_list
}

source_set("common") {
  sources = [
    # BD ADD: START
    "fps_recorder.cc",
    "fps_recorder.h",
    # END
    "settings.cc",
    "settings.h",
    "task_runners.cc",
    "task_runners.h",
  ]

  deps = [
    "$flutter_root/fml",
  ]

  public_configs = [
    ":flutter_config",
    "$flutter_root:config",
  ]
}

# BD ADD: START
test_fixtures("fps_recorder_fixtures") {
  fixtures = []
}

executable("fps_recorder_unittests") {
  testonly = true

  sources = [
    "fps_recorder_test.h",
    "fps_recorder_test.cc",
    "fps_recorder_unittests.cc",
  ]

  deps = [
    ":fps_recorder_fixtures",
    "$flutter_root/common",
    "$flutter_root/testing",
    "//third_party/dart/runtime:libdart_jit",
  ]
}
# END