# Copyright 2013 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

bd_flutter_lib_ui_sources = [
  "//flutter/bdflutter/lib/ui/performance/performance.cc",
  "//flutter/bdflutter/lib/ui/performance/performance.h",
  "//flutter/bdflutter/lib/ui/performance/boost.cc",
  "//flutter/bdflutter/lib/ui/performance/boost.h",
]

image_loader_sources = [
  "//flutter/bdflutter/lib/ui/painting/image_loader.h",
  "//flutter/bdflutter/lib/ui/painting/image_loader.cc",
]
