# Copyright 2013 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# BD ADD:
import("//flutter/bdflutter/shell/platform/darwin/common/BD_BUILD.gni")

framework_shared_headers =
    get_path_info([
                    "framework/Headers/FlutterMacros.h",
                    "framework/Headers/FlutterBinaryMessenger.h",
                    "framework/Headers/FlutterChannels.h",
                    "framework/Headers/FlutterCodecs.h",
                    "framework/Headers/FlutterTexture.h",
                  ],
                  "abspath")

# BD ADD
framework_shared_headers += messenger_provider_headers
