# Copyright 2013 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

bd_flutter_darwin_common_path = "//flutter/bdflutter/shell/platform/darwin/common"

messenger_provider_headers = [
  "$bd_flutter_darwin_common_path/framework/Headers/FlutterBinaryMessengerProvider.h",
]

messenger_provider_deps = [
  "//flutter/fml",
]